# maintainers-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  eval_thresholds.yaml  pyproject.toml  seedexample.sh
.github/workflows/: eval-classification.yml  eval-rag.yml
app/: Dockerfile  main.py  widget.js
app/agent/: loop.py
app/core/: config.py  deps.py  exception_handlers.py  lifespan.py  logging.py  startup_checks.py
app/db/: Dockerfile.migrate  models.py  session.py  user_db.py
app/domain/: errors.py
app/infra/: embeddings.py  inference.py  inference_client.py  llm.py  minio.py  redact.py  redis.py  tracing.py  vault.py
app/rag/: chunker.py  indexer.py  reranker.py  retriever.py
app/repositories/: audit.py  documents.py  inference.py  memory.py  users.py  widget.py
app/routes/: admin.py  auth.py  chat.py  memory.py  rag.py  widget.py
app/schemas/: chat.py  memory.py  rag.py  user.py  widget.py
app/services/: auth.py  chat.py  memory.py  rag.py
chatbot/: Dockerfile  app.py  utils.py
chatbot/.streamlit/: config.toml
chatbot/pages/: 1_Chat.py  2_Memory.py  3_Admin.py
docs/: ARCH.md  DECISIONS.md  EVALS.md  RUNBOOK.md  SECURITY.md
eval/classification/: golden_set.jsonl  runner.py
eval/rag/: eval_report.json  generation_eval.py  golden_set.jsonl  metrics.py  retrieval_eval.py  runner.py
inference/: Dockerfile  expected_sha256.txt  main.py
inference/routes/: classify.py  ner.py  summarize.py
inference/runners/: classifier.py  ner.py  summarizer.py
ml/: compare.ipynb
ml/data/: fetch.py  fetch_docs.py  label_map.py  split.py
ml/finetune/: best_model.pt  finetune.ipynb
ml/llm_baseline/: llm_baseline.ipynb
ml/ml_baseline/: baseline.ipynb  model.pkl
tests/: conftest.py  test_redact.py  test_routes_chat.py  test_routes_memory.py  test_routes_rag.py
tests/smoke/: test_health.py
widget/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+41 files in other folders)
