[project]
name = "maintainers-copilot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Auth
    "fastapi-users[sqlalchemy]>=13.0.0",
    # HTTP client
    "httpx>=0.28.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Vault
    "hvac>=2.3.0",
    # MinIO / S3
    "boto3>=1.35.0",
    # Tracing
    "langfuse>=3.0.0",
    # LLM — OpenAI primary, Anthropic fallback
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    # ML — offline training only (excluded from api/chatbot images via extras)
    "transformers>=4.47.0",
    "sentence-transformers>=3.3.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    # Data pipeline
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    # RAG retrieval
    "rank-bm25>=0.2.2",
    # RAGAS eval
    "ragas>=0.2.0",
    # Streamlit
    "streamlit>=1.40.0",
    # Utilities
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
ml = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]
torch = ["torch>=2.5.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["app*", "ml*", "chatbot*", "inference*", "eval*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
